--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -5,19 +5,22 @@
 </header>
 <div class="menuBar" id="menuBar">
     <ul>
-        <li style="float:left"><a (click)="changeNav('Infoprovider')" id="navInfoprovider" disabled><i class="fas fa-th-list"></i>Infoprovider</a></li>
+        <li style="float:left"><a class="notClickable" disabled><i class="fas fa-th-list" ></i>Infoprovider</a></li>
         <li style="float:left"><a class="selected" (click)="changeNav('Summary')" id="navSummary"><i class="fas fa-table"></i>Summary</a></li>
-        <li style="float:left"><a (click)="changeNav('Forecast')" id="navForecast" disabled><i class="fas fa-chart-line"></i>Forecast</a></li>
-        <li style="float:left"><a (click)="changeNav('Statistics')" id="navStatistics" disabled><i class="fas fa-chart-bar"></i>Statistics</a></li>
+        <li style="float:left"><a class="notClickable" disabled><i class="fas fa-chart-line"></i>Forecast</a></li>
+        <li style="float:left"><a class="notClickable" disabled><i class="fas fa-chart-bar"></i>Statistics</a></li>
         <li style="float:left"><a (click)="changeNav('Article Forecast')"id="navArticleForecast"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
         <!--<li style="float:right; ">
                   <a href="#settings" style="margin-top:-8px">
                       <span style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span>
                   </a>
               </li>-->
-        <li style="float:right; ">
-            <a (click)="openManual()" style="margin-top:-8px">
-                <span style="font-size: 24px; color: #99D3ED "><i class="fas fa-book"></i></span>
+        <li style="float:right;" >
+            <a  (click)="openManual()" style="margin-top:-8px">
+                <span id="manual" style="font-size: 24px; color: #99D3ED "><i class="fas fa-book"
+       #tooltip="matTooltip"
+           matTooltip="Click here to open the user manual"
+           matTooltipPosition= "above"></i></span>
             </a>
         </li>
     </ul>
@@ -27,7 +30,9 @@
     <app-article [articleNumber] = "art" id="Article" style="display: none;" #Article ></app-article>
     <app-summary id="Summary" style="display: block;" #Summary></app-summary>
 </main>
-<div id="chatIcon" (click)="showChat()" style="display: block;">
+<div id="chatIcon" (click)="showChat()" style="display: block; cursor: pointer"        #tooltip="matTooltip"
+           matTooltip="Click here to open the the conversational assistant Planny"
+           matTooltipPosition= "above">
     <span style="font-size:32px"><i class="fas fa-comments"></i></span>
 </div>
 <aside id="webChat" class="webchat-container" style="display: none;">
