--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -176,7 +176,7 @@ body {
 	margin-left: 4px;
   }
   
-  #mainInformation {
+  .mainInformation {
 	margin-top: 16px;
 	margin-bottom: 16px;
   }
@@ -255,3 +255,10 @@ body {
   box-shadow: 0 0 0 4px rgb(255,154,154);
 }
 
+button:disabled {
+    cursor:default !important;
+}
+
+button:not(:disabled), [type="button"]:not(:disabled), [type="reset"]:not(:disabled), [type="submit"]:not(:disabled) {
+    cursor: default;
+    }
