--- a/src/app/methods/methods.component.scss
+++ b/src/app/methods/methods.component.scss
@@ -89,13 +89,13 @@ body {
 	font-weight: bolder;
 	color: gray;
   }
-  
-  #articleText {
-	display: inline-block;
-	margin-left: 20px;
-	font-weight: bolder;
-	color: gray;
-  }
+
+#articleText {
+  display: inline-block;
+  margin-left: 20px;
+  font-weight: lighter;
+  color: #005981;
+}
   
   #filterbox {
 	float: right;
