--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -102,8 +102,8 @@ li .selected {
 #articleText {
   display: inline-block;
   margin-left: 20px;
-  font-weight: bolder;
-  color: gray;
+  font-weight: lighter;
+  color: #005981;
 }
 
 #filterbox {
