--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -39,7 +39,8 @@
     <div id="closeIcon" (click)="hideChat()" style="display: block;">
         <span style="font-size:12px">X</span>
     </div>
-    <div  style="display: block; text-align: right;">Planny</div>
-    <div id="botWin" style="height: calc(100% - 20px)" #botWindow></div>
+    <div style="float: right;width: 40px;height: 40px;"><img src="../../assets/images/avataaars.png" style="width: 40px;height: 40px; box-shadow: none;"> </div>
+    <div  style="display: block; float: right; width: fit-content; margin: 8px 5px;">Planny</div>
+    <div id="botWin" style="height: calc(100% - 40px)" #botWindow></div>
 
 </aside>
