Manual updated, minor changes in data

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -15,12 +15,12 @@
                       <span style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span>
                   </a>
               </li>-->
-        <li style="float:right;" >
-            <a  (click)="openManual()" style="margin-top:-8px">
-                <span id="manual" style="font-size: 24px; color: #99D3ED "><i class="fas fa-book"
+        <li style="float:left;" >
+            <a  (click)="openManual()">
+                <span id="manual" style=" color: #99D3ED;"><i class="fas fa-book"
        #tooltip="matTooltip"
            matTooltip="Click here to open the user manual"
-           matTooltipPosition= "above"></i></span>
+           matTooltipPosition= "above"></i><i>User Manual</i></span>
             </a>
         </li>
     </ul>
