--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -267,7 +267,7 @@ aside img {
 
 .webchat-container{
   height: 80%;//285px;
-  overflow: hidden;
+  overflow: auto;
   flex: 1;
   display: flex;
   flex-direction: column;
